--- a/jobTracker/sourceCode/static/sourceCode/main.css
+++ b/jobTracker/sourceCode/static/sourceCode/main.css
@@ -88,9 +88,34 @@ ul {
   float: left;
   font-size: 1.3vw;
 }
-
-
 /* end of home.html */
+
+.register-form {
+  width: 80%;
+  margin-top: 2rem;
+}
+
+.register-form button {
+  margin: auto;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 768px) {
+  .register-form {
+    margin-top: 0rem;
+  }
+}
+@media screen and (max-width: 500px) {
+  .register-form {
+    margin-top: 0rem;
+    width: 100%;
+  }
+}
+/* register.html */
+
+
+
+/* end of register.html */
 
 /* .article-title {
   color: #444444;
