--- a/jobTracker/sourceCode/static/sourceCode/main.css
+++ b/jobTracker/sourceCode/static/sourceCode/main.css
@@ -90,6 +90,8 @@ ul {
 }
 /* end of home.html */
 
+/* register.html */
+
 .register-form {
   width: 80%;
   margin-top: 2rem;
@@ -122,11 +124,27 @@ ul {
     width: 100%;
   }
 }
-/* register.html */
-
-
 
 /* end of register.html */
+
+/* profile.html */
+
+.profile-section {
+  /* background-color: red; */
+}
+
+.account-img {
+  height: 150px;
+  width: 150px;
+  margin-right: 20px;
+  margin-bottom: 16px;
+}
+
+.account-heading {
+  font-size: 2.5rem;
+}
+
+/* end of profile.html */
 
 /* .article-title {
   color: #444444;
