--- a/jobTracker/sourceCode/templates/sourceCode/base.html
+++ b/jobTracker/sourceCode/templates/sourceCode/base.html
@@ -27,13 +27,17 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarToggle">
         <div class="navbar-nav mr-auto">
+          {% if user.is_authenticated %}
           <a class="nav-item nav-link" href="{% url 'jobTrack-home'%}">Home</a>
           <a class="nav-item nav-link" href="{% url 'jobTrack-about'%}">About</a>
+          {% endif %}
         </div>
         <!-- Navbar Right Side -->
         <div class="navbar-nav">
           {% if user.is_authenticated %}
-            <a class="nav-item nav-link" href="{% url 'profile'%}">Profile</a>
+            <a class="nav-item nav-link" href="{% url 'profile'%}">
+              {{user.username}}
+            </a>
             <a class="nav-item nav-link" href="{% url 'logout'%}">Logout</a>
 
           {% else %}
