--- a/jobTracker/users/templates/users/profile.html
+++ b/jobTracker/users/templates/users/profile.html
@@ -4,13 +4,27 @@
 {% block content %}
 
 <div class="profile-section">
-  <div class="media">
+  <!-- <div class="media">
     <img class="rounded-circle account-img" src="{{ user.profile.image.url }}" >
     <div class="media-body">
       <h2 class="account-heading">{{ user.username }}</h2>
       <p class="text-secondary">{{ user.email }}</p>
     </div>
-  </div>
+  </div> -->
+    <form  method="POST" enctype="multipart/form-data">
+      {% csrf_token %}
+      <fieldset class="form-group">
+        <legend class="border-bottom mb-4 text-center ">Profile Info</legend>
+        <div class="image-section">
+          <img class="rounded-circle account-img" src="{{ user.profile.image.url }}" >
+          {{ p_form|crispy }}
+        </div>
+        {{ u_form|crispy }}
+      </fieldset>
+      <div class="form-group">
+        <button class="btn btn-outline-info" type="submit" name="button">Update</button>
+      </div>
+    </form>
 </div>
 
 
