--- a/jobTracker/sourceCode/templates/sourceCode/base.html
+++ b/jobTracker/sourceCode/templates/sourceCode/base.html
@@ -9,6 +9,9 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
+  <!-- reference your copy Font Awesome here (from our CDN or by hosting yourself) -->
+<script src="https://kit.fontawesome.com/a076d05399.js"></script>
+
   <link rel="stylesheet" type="text/css" href="{% static 'sourceCode/main.css'%}">
 
   {% if title%}
