--- a/jobTracker/sourceCode/static/sourceCode/main.css
+++ b/jobTracker/sourceCode/static/sourceCode/main.css
@@ -79,7 +79,7 @@ ul {
   opacity: 75%;
   font-weight: bold;
   text-transform: uppercase;
-  font-size: 2.3vw;
+  font-size: 2.1vw;
 }
 
 .default-text-home a {
@@ -279,6 +279,32 @@ ul {
 .add-form #add-button {
   text-align: center;
 }
+
+/* end add form */
+
+/* search */
+.search-section .search-form{
+  /* width: 80%; */
+  /* background-color: red; */
+  width: 80%;
+  text-align: center;
+}
+
+.search-form p{
+  margin: 1rem;
+}
+.search-form p input{
+  margin: 0.2rem;
+}
+.search-form button {
+  background-color: red;
+  text-transform: uppercase;
+  font-size: 0.9vw;
+  font-weight: bold;
+  text-align: center;
+}
+
+/* end search */
 
 /* .article-title {
   color: #444444;
