--- a/jobTracker/sourceCode/templates/sourceCode/home.html
+++ b/jobTracker/sourceCode/templates/sourceCode/home.html
@@ -13,11 +13,10 @@
     <a class="mt-5" href= {% url 'post-create' %}>
       Add Job
     </a>
+    
     <div class="mt-5">
-      History
-    </div>
-    <div class="mt-5">
-      Sort By
+    <a href={% url 'jobTrack-search' %}>
+      Search</a>
     </div>
 
   </div>
@@ -33,35 +32,60 @@
   </div>
 
   {% else %}
+
   <div class="tracker-content-section d-flex flex-column align-items-center">
-    {% for job in appliedJobs %}
-      <!-- {% if job.author == user %} -->
-    <div class="card">
-        <div class="card-header d-flex justify-content-around align-items-end">
-          <p>Applied on: {{ job.date_applied|date:"M d, Y" }}</p>
-          <p>Status: {{ job.status }}</p>
-        </div>
-        <div class="card-body">
-          <p>Company :</p> <span class="ml-4">
-            <!-- <a href="{% url 'post-detail' job.id %}"> -->
-              {{ job.company }}</span>
-            <!-- </a> -->
-          <p>Role :</p> <span class="ml-4">{{ job.role }}</span>
-        </div>
-        <div class="card-footer">
-          <a href="{% url 'post-update' job.id %}" title="update">
-            <i class='fas fa-pen-alt update-icon'></i>
-          </a>
 
-          <a href="{% url 'post-delete' job.id %}" title="delete">
-            <i class='far fa-trash-alt delete-icon'></i>
-          </a>
+        {% for job in appliedJobs %}
 
+        <!-- {% if job.author == user %} -->
+        <div class="card">
+          <div class="card-header d-flex justify-content-around align-items-end">
+            <p>Applied on: {{ job.date_applied|date:"M d, Y" }}</p>
+            <p>Status: {{ job.status }}</p>
+          </div>
+          <div class="card-body">
+            <p>Company :</p> <span class="ml-4">
+              <!-- <a href="{% url 'post-detail' job.id %}"> -->
+                {{ job.company }}</span>
+              <!-- </a> -->
+            <p>Role :</p> <span class="ml-4">{{ job.role }}</span>
+          </div>
+          <div class="card-footer">
+            <a href="{% url 'post-update' job.id %}" title="update">
+              <i class='fas fa-pen-alt update-icon'></i>
+            </a>
+
+            <a href="{% url 'post-delete' job.id %}" title="delete">
+              <i class='far fa-trash-alt delete-icon'></i>
+            </a>
+
+          </div>
+      </div>
+        <!-- {% endif %} -->
+        {% endfor %}
+        <div class="pagination-section">
+          {% if is_paginated %}
+            {% if page_obj.has_previous %}
+              <a class="btn btn-outline-info mb-4" href="?page=1">First</a>
+              <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+            {% endif %}
+
+            {% for num in page_obj.paginator.page_range %}
+              {% if page_obj.number == num %}
+                <a class="btn btn-info mb-4" href="?page={{num}}">{{ num }}</a>
+              {% elif num > page_obj.number|add:'-3' and num <= page_obj.number|add:'3' %}
+                <a class="btn btn-outline-info mb-4" href="?page={{num}}">{{ num }}</a>
+              {% endif %}
+            {% endfor %}
+
+            {% if page_obj.has_next %}
+              <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.next_page_number }}">Next</a>
+              <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.paginator.num_pages }}">Last</a>
+            {% endif %}
+          {% endif %}
         </div>
-    </div>
-      <!-- {% endif %} -->
-    {% endfor %}
-
   </div>
-  {% endif %}
+
+
+  {% endif %} <!-- end of checking for job -->
     {% endblock content %}
