--- a/jobTracker/sourceCode/templates/sourceCode/base.html
+++ b/jobTracker/sourceCode/templates/sourceCode/base.html
@@ -11,6 +11,7 @@
 
   <!-- reference your copy Font Awesome here (from our CDN or by hosting yourself) -->
 <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <link rel="stylesheet" type="text/css" href="{% static 'sourceCode/main.css'%}">
 
@@ -73,7 +74,30 @@
 </div>
 </main>
 
+<!-- <script type="text/javascript" src="{% static 'sourceCode/dynamic.js'%}"></script> -->
 
+<script type="text/javascript">
+
+  const room  = document.querySelector('.sorting-section');
+  const btns = document.querySelectorAll('.child-btn');
+
+  room.addEventListener('click', e => {
+   btns.forEach(btn => {
+         if(btn.getAttribute('id') === e.target.getAttribute('id'))
+           btn.classList.add('active');
+         else
+           btn.classList.remove('active');
+        });
+  });
+
+  // var elements = document.getElementsByClassName("child-btn");
+  // for(var i=0; i<elements.length; i++){
+  //   elements[i].onclick = function(){
+  //     this.classList.add("active");
+  //   };
+  // }
+
+</script>
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
