--- a/jobTracker/sourceCode/templates/sourceCode/advance_search.html
+++ b/jobTracker/sourceCode/templates/sourceCode/advance_search.html
@@ -50,7 +50,7 @@
       </form>
 
       {% for job in queryset %}
-      <div class="card">
+      <!-- <div class="card">
         <div class="card-header d-flex justify-content-around align-items-end">
           <p>Applied on: {{ job.date_applied|date:"M d, Y" }}</p>
           <p>Status: {{ job.status }}</p>
@@ -68,6 +68,30 @@
             <i class='far fa-trash-alt delete-icon'></i>
           </a>
         </div>
+    </div> -->
+    <div class="card">
+      <div class="card-body container">
+        <div class="row">
+          <div class="card-firstcol col-md-6">
+            <h4>{{ job.company }}</h4>
+            <p>{{ job.role }}</p>
+          </div>
+          <div class="card-secondcol col-sm">
+            <p>{{ job.date_applied|date:"M d, Y" }}</p>
+          </div>
+          <div class="card-thirdcol col-sm">
+            <p>Status: {{ job.status }}</p>
+            <div class="icons-card">
+              <a href="{% url 'post-update' job.id %}" title="update">
+                <i class='fas fa-pen-alt update-icon'></i>
+              </a>
+              <a href="{% url 'post-delete' job.id %}" title="delete">
+                <i class='far fa-trash-alt delete-icon'></i>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
       {% endfor %}
     </div>
