--- a/jobTracker/sourceCode/templates/sourceCode/base.html
+++ b/jobTracker/sourceCode/templates/sourceCode/base.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
+  <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}" />
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -73,8 +74,6 @@
 
 </div>
 </main>
-
-<!-- <script type="text/javascript" src="{% static 'sourceCode/dynamic.js'%}"></script> -->
 
 <script type="text/javascript">
 
