--- a/jobTracker/sourceCode/templates/sourceCode/home.html
+++ b/jobTracker/sourceCode/templates/sourceCode/home.html
@@ -14,9 +14,10 @@
       Add Job
     </a>
 
-    <div class="mt-3">
+    <a class="mt-3" href="{% url 'jobTrack-history' %}">
       History
-    </div>
+    </a>
+
 
     <a class="advance-search mt-3"
       href="{% url 'jobTrack-advancesearch' %}">Advance Search
@@ -92,26 +93,30 @@
         {% for job in appliedJobs %}
 
           <div class="card">
-            <div class="card-header d-flex justify-content-around align-items-end">
-              <p>Applied on: {{ job.date_applied|date:"M d, Y" }}</p>
-              <p>Status: {{ job.status }}</p>
-            </div>
-            <div class="card-body">
-              <p>Company :</p> <span class="ml-4">
-                <!-- <a href="{% url 'post-detail' job.id %}"> -->
-                  {{ job.company }}</span>
-                <!-- </a> -->
-              <p>Role :</p> <span class="ml-4">{{ job.role }}</span>
-            </div>
-            <div class="card-footer">
-              <a href="{% url 'post-update' job.id %}" title="update">
-                <i class='fas fa-pen-alt update-icon'></i>
-              </a>
+            <div class="card-body container">
+              <div class="row">
+                <div class="card-firstcol col-md-6">
+                  <h4>{{ job.company }}</h4>
+                  <p>{{ job.role }}</p>
+                </div>
 
-              <a href="{% url 'post-delete' job.id %}" title="delete">
-                <i class='far fa-trash-alt delete-icon'></i>
-              </a>
+                <div class="card-secondcol col-sm">
+                  <p>{{ job.date_applied|date:"M d, Y" }}</p>
+                </div>
 
+                <div class="card-thirdcol col-sm">
+                  <p>Status: {{ job.status }}</p>
+                  <div class="icons-card">
+                    <a href="{% url 'post-update' job.id %}" title="update">
+                      <i class='fas fa-pen-alt update-icon'></i>
+                    </a>
+
+                    <a href="{% url 'post-delete' job.id %}" title="delete">
+                      <i class='far fa-trash-alt delete-icon'></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
 
