--- a/jobTracker/users/templates/users/password_reset_confirm.html
+++ b/jobTracker/users/templates/users/password_reset_confirm.html
@@ -2,7 +2,6 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-
   <div class="register-form" id="check">
     <form  method="POST">
       {% csrf_token %}
@@ -11,7 +10,7 @@
         {{ form|crispy }}
       </fieldset>
       <div class="form-group">
-        <button class="btn btn-outline-info" type="submit" name="button">Request Password Reset</button>
+        <button class="btn btn-outline-info" type="submit" name="button">Reset Password</button>
       </div>
     </form>
   </div>
