--- a/jobTracker/sourceCode/templates/sourceCode/post_form.html
+++ b/jobTracker/sourceCode/templates/sourceCode/post_form.html
@@ -2,8 +2,7 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-
-  <div class="add-form" id="check">
+  <div class="add-form" id="adding-form">
     <form  method="POST">
       {% csrf_token %}
       <fieldset class="form-group">
