--- a/jobTracker/sourceCode/templates/sourceCode/about.html
+++ b/jobTracker/sourceCode/templates/sourceCode/about.html
@@ -1,7 +1,9 @@
 {% extends "sourceCode/base.html" %}
 
 {% block content %}
-
-  <h1>Job Tracker - About Page</h1>
+  <div class="about">
+    <h1>Job Tracker - About Page</h1>
+  </div>
+  
 
   {% endblock content %}
