--- a/jobTracker/sourceCode/templates/sourceCode/base.html
+++ b/jobTracker/sourceCode/templates/sourceCode/base.html
@@ -8,7 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+  integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
   <!-- reference your copy Font Awesome here (from our CDN or by hosting yourself) -->
 <script src="https://kit.fontawesome.com/a076d05399.js"></script>
@@ -23,45 +24,114 @@
   {% endif %}
 </head>
 <body>
-  <header class="site-header">
-  <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
-    <div class="container">
-      <a class="navbar-brand mr-4" href="{% url 'jobTrack-home'%}">Job Tracker</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarToggle">
-        <div class="navbar-nav mr-auto">
-          {% if user.is_authenticated %}
-          <a class="nav-item nav-link" href="{% url 'jobTrack-home'%}">Home</a>
-          <a class="nav-item nav-link" href="{% url 'jobTrack-about'%}">About</a>
-          {% endif %}
-        </div>
-        <!-- Navbar Right Side -->
-        <div class="navbar-nav">
-          {% if user.is_authenticated %}
-            <a class="nav-item nav-link" href="{% url 'profile'%}">
-              {{user.username}}
-            </a>
-            <a class="nav-item nav-link" href="{% url 'logout'%}">Logout</a>
-
-          {% else %}
-            <a class="nav-item nav-link" href="{% url 'login'%}">Login</a>
-            <a class="nav-item nav-link" href="{% url 'register'%}">Register</a>
+  <!-- <header class="site-header">
+    <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
+      <div class="container">
+        <a class="navbar-brand mr-4" href="{% url 'jobTrack-home'%}">Job Tracker</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle"
+        aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarToggle">
+          <div class="navbar-nav mr-auto">
+            {% if user.is_authenticated %}
+            <a class="nav-item nav-link" href="{% url 'jobTrack-home'%}">Home</a>
+            <a class="nav-item nav-link" href="{% url 'jobTrack-about'%}">About</a>
             {% endif %}
+          </div>
+
+          <div class="navbar-nav">
+            {% if user.is_authenticated %}
+              <a class="nav-item nav-link" href="{% url 'profile'%}">
+                {{user.username}}
+              </a>
+              <a class="nav-item nav-link" href="{% url 'logout'%}">Logout</a>
+
+            {% else %}
+              <a class="nav-item nav-link" href="{% url 'login'%}">Login</a>
+              <a class="nav-item nav-link" href="{% url 'register'%}">Register</a>
+              {% endif %}
+          </div>
         </div>
       </div>
-    </div>
-  </nav>
-</header>
+    </nav>
+  </header> -->
+
+  <header class="heading">
+    <!-- <nav class="nav-bar">
+      <div class="nav-left">
+        <h2>Logo</h2>
+        <div class="home-about">
+          {% if user.is_authenticated %}
+          <a class="home-link" href="{% url 'jobTrack-home'%}">Home</a>
+          <a class="about-link" href="{% url 'jobTrack-about'%}">About</a>
+          {% endif %}
+        </div>
+      </div>
+
+      <div class="nav-right">
+        <a class="history-link" href="#">History</a>
+        <div class="nav-img dropdown">
+          <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton"
+          data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <img src="{{ user.profile.image.url }}" alt="profile-img" class="rounded profile-img">
+          </button>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+            <a class="nav-item nav-link" href="{% url 'profile'%}">
+              Profile
+            </a>
+            <a class="nav-item nav-link" href="{% url 'logout'%}">Logout</a>
+          </div>
+        </div>
+      </div>
+    </nav> -->
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary bigger-nav">
+      <div class="navbar-left">
+        <button class="navbar-toggler" type="button" data-toggle="collapse"
+          data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+          aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <a class="navbar-brand ml-4" href="#">Navbar</a>
+      </div>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+          </ul>
+        </div>
+        <div class="nav-right">
+          <div class="nav-img dropdown">
+            <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton"
+            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <img src="{{ user.profile.image.url }}" width="30" height="30"
+              alt="profile-img" class="rounded profile-img">
+            </button>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+              <a class="nav-item nav-link" href="{% url 'profile'%}">
+                Profile
+              </a>
+              <a class="nav-item nav-link" href="{% url 'logout'%}">Logout</a>
+            </div>
+          </div>
+        </div>
+    </nav>
+  </header>
 
 <main role="main" class="container-fluid">
 <div class="row">
 
-  <div class="">
+  <!-- <div class="">
     {%  block sidenav %}{% endblock%}
-  </div>
-  <div class="col-md-10 ml-md-auto">
+  </div> -->
+  <div class="main-content">
     {% if messages %}
       {% for message in messages %}
         <div class="alert alert-{{ message.tags }}">
@@ -75,28 +145,58 @@
 </div>
 </main>
 
-<script type="text/javascript">
+  <script type="text/javascript">
+    var expandDiv = document.getElementById("expand");
+    var fieldExpandDiv = document.getElementById("secondouter-fields");
+    var parentDownNav = document.getElementById("downnav")
+    var downNavExpand = document.getElementById("expand-downnav");
+    var displayIcons = document.getElementById("icons-downnav");
 
-  const room  = document.querySelector('.sorting-section');
-  const btns = document.querySelectorAll('.child-btn');
+    var speed = 2;
+    var secondSpeed = 3.5;
 
-  room.addEventListener('click', e => {
-   btns.forEach(btn => {
-         if(btn.getAttribute('id') === e.target.getAttribute('id'))
-           btn.classList.add('active');
-         else
-           btn.classList.remove('active');
-        });
-  });
+    function expanding() {
+    var scrolltop = window.pageYOffset; // get number of pixels document has scrolled vertically
+    var scrollAndSpeed = (scrolltop / speed);
+    var scrollAndSpeed2 = (scrolltop / secondSpeed);
 
-  // var elements = document.getElementsByClassName("child-btn");
-  // for(var i=0; i<elements.length; i++){
-  //   elements[i].onclick = function(){
-  //     this.classList.add("active");
-  //   };
-  // }
+    var sideScrollAndSpeed = (scrolltop / 3);
+    //Expand using transform
+    //expandDiv.style.transform = "scalex( " + Math.min(Math.max(scrollAndSpeed, 1), 10) + ")";
 
-</script>
+    //Or using width
+
+    expandDiv.style.width = Math.min(Math.max(scrollAndSpeed, 1), 100) + "%";
+    fieldExpandDiv.style.width = Math.min(Math.max(scrollAndSpeed2, 1), 100) + "%";
+
+    if(expandDiv.style.width == "100%" || expandDiv.style.width >= "80%"){
+      expandDiv.style.borderRadius = "0px";
+    } else if (expandDiv.style.width < "80%" ) {
+      expandDiv.style.borderRadius = "";
+    }
+
+    if(fieldExpandDiv.style.width == "100%" || fieldExpandDiv.style.width >= "80%"){
+      fieldExpandDiv.style.borderRadius = "0px";
+      parentDownNav.style.height = "10%";
+      downNavExpand.style.height = "100%";
+    }
+    else if (fieldExpandDiv.style.width < "80%" ) {
+      fieldExpandDiv.style.borderRadius = "";
+      parentDownNav.style.height = "0%";
+      downNavExpand.style.height = "0%";
+    }
+
+    if(downNavExpand.style.height == "100%"){
+      displayIcons.style.display = "block";
+      displayIcons.style.transitionDelay = "5s";
+    } else if(downNavExpand.style.height < "100%")
+      displayIcons.style.display = "none";
+    }
+
+    window.addEventListener('scroll', function() { // on page scroll
+    requestAnimationFrame(expanding); // call parallaxing()
+    }, false);
+  </script>
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
