--- a/jobTracker/sourceCode/templates/sourceCode/home.html
+++ b/jobTracker/sourceCode/templates/sourceCode/home.html
@@ -18,7 +18,6 @@
       History
     </a>
 
-
     <a class="advance-search mt-3"
       href="{% url 'jobTrack-advancesearch' %}">Advance Search
     </a>
@@ -27,6 +26,33 @@
   {% endblock %}
 
   {% block content %}
+    <div class="intro-section">
+      <h4>Hello, {{user.username}} <br/>
+          Let's track your future job together!</h4>
+    </div>
+
+    <div class="search-container">
+      <div id="expand">
+
+      </div>
+    </div>
+
+    <div class="outer-sortasearch-container">
+      <div class="sort-asearch-container">
+        <div class="sort-section">
+          <p>SORT BY<span> : Date Min  |  Date Max  |
+            Company Min  |  Company Max</span> </p>
+        </div>
+        <div class="asearch-section">
+          <a class="asearch-link"
+            href="{% url 'jobTrack-advancesearch' %}">
+            Advance Search
+          </a>
+        </div>
+      </div>
+    </div>
+
+
   {% if appliedJobs|length <= 0 %}
 
   <div class="d-flex flex-column align-items-center justify-content-center default-text-home">
@@ -37,10 +63,65 @@
 
   {% else %}
 
-  <div class="tracker-content-section d-flex flex-column align-items-center">
+  <div class="outer-fields">
+    <div id="secondouter-fields">
+      <div class="fields-container container-fluid" id="fields-container">
+        <div class="row">
+          <div class="col-3 company d-flex align-items-center">
+            Company
+          </div>
+          <div class="col-3 role d-flex align-items-center">
+            Role
+          </div>
+          <div class="col-2 status d-flex align-items-center ">
+            Status
+          </div>
+          <div class="col date d-flex align-items-center">
+            Date
+          </div>
+          <div class="col empty d-flex align-items-center">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
-    <div class="search-sort d-flex justify-content-between">
+  <!-- <a class="add-button" href="{% url 'post-create'%}">
+    ADD JOB
+  </a> -->
 
+  <div id="downnav">
+    <div id="expand-downnav">
+      <div id="icons-downnav">
+        <div class="icons-downnav">
+          <a href="#">
+            <i class="fas fa-home"></i>
+            Home
+          </a>
+          <a href="{% url 'jobTrack-about'%}">
+            <i class="fas fa-info-circle"></i>
+            About
+          </a>
+          <a href="{% url 'jobTrack-advancesearch'%}">
+            <i class="fa fa-search-plus" aria-hidden="true"></i>
+            Advance Search
+          </a>
+          <a href="{% url 'jobTrack-history'%}">
+            <i class="fas fa-history"></i>
+            History
+          </a>
+          <a href="{% url 'post-create'%}">
+            <i class="fas fa-plus-circle"></i>
+            Add Job
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="tracker-container d-flex flex-column align-items-center">
+
+    <!-- <div class="search-sort d-flex justify-content-between">
       <form class="home-form" action="." method="GET">
         <div class="form-row d-flex justify-content-center">
           <div class="form-group col-sm-10">
@@ -64,63 +145,74 @@
 
           <button class="child-btn btn" id="" type="submit" name="company-asc" value="company">company <i class="fa fa-sort-alpha-asc"></i></button>
           <button class="child-btn btn" id="" type="submit" name="company-desc" value="-company">company <i class="fa fa-sort-alpha-desc"></i></button>
-
-          <!-- <button class="btn"  type="submit" name="role-asc" value="role">role ascending</button>
-          <button class="btn"  type="submit" name="role-desc" value="-role">role decending</button> -->
         </form>
       </div>
-    </div>
+    </div> -->
 
+  {% for job in appliedJobs %}
 
-    <!-- <form class="home-form" action="." method="GET">
-      <div class="form-row d-flex justify-content-center">
-        <div class="form-group col-8">
-          <div class="input-group">
-            <input class="form-control py-2 border-right-0 border" type="search" name="company_or_role_contains" placeholder="Company or Role..">
-            <span class="input-group-append">
-              <button type="submit" class="input-group-text bg-transparent">
-                <i class='fa fa-search'></i>
-              </button>
-            </span>
-          </div>
+  <div class="card">
+    <div class="card-body container-fluid">
+      <div class="row mt-2">
+        <div class="col-3 company-card d-flex align-items-center">
+          {{ job.company }}
         </div>
-      </div>
-      <div class="advance-search">
-        <a href="{% url 'jobTrack-advancesearch' %}">Advance Search</a>
-      </div>
-  </form> -->
+        <div class="col-3 role-card d-flex align-items-center">
+          {{ job.role }}
+        </div>
+        <div class="col-2 status-card d-flex align-items-center"
+          {% if job.status == 'pending' %}
+            style="color:#A5AF35;"
+          {% elif job.status == 'success'%}
+            style="color:#00AF66;"
+          {% elif job.status == 'interviewing'%}
+            style="color:#4C99D4;"
+          {% elif job.status == 'not-selected'%}
+            style="color:#AB1500;"
+          {% endif %}
+        >
+          <i class="fa fa-circle"></i>{{ job.status }}
+        </div>
+        <div class="col date-card d-flex align-items-center">
+          {{ job.date_applied|date:"M d, Y" }}
+        </div>
+        <div class="col icon-card d-flex justify-content-around
+        align-items-center">
+          <a href="{% url 'post-update' job.id %}" title="update">
+            <i class='fas fa-pen-alt update-icon'></i>
+          </a>
 
-        {% for job in appliedJobs %}
+          <a href="{% url 'post-delete' job.id %}" title="delete">
+            <i class='far fa-trash-alt delete-icon'></i>
+          </a>
+        </div>
 
-          <div class="card">
-            <div class="card-body container">
-              <div class="row">
-                <div class="card-firstcol col-md-6">
-                  <h4>{{ job.company }}</h4>
-                  <p>{{ job.role }}</p>
-                </div>
+        <!-- <div class="card-firstcol col-4">
+          <h4>{{ job.company }}</h4>
+          <p>{{ job.role }}</p>
+        </div>
 
-                <div class="card-secondcol col-sm">
-                  <p>{{ job.date_applied|date:"M d, Y" }}</p>
-                </div>
+        <div class="card-secondcol col-sm">
+          <p>{{ job.date_applied|date:"M d, Y" }}</p>
+        </div>
 
-                <div class="card-thirdcol col-sm">
-                  <p>Status: {{ job.status }}</p>
-                  <div class="icons-card">
-                    <a href="{% url 'post-update' job.id %}" title="update">
-                      <i class='fas fa-pen-alt update-icon'></i>
-                    </a>
+        <div class="card-thirdcol col-sm">
+          <p>Status: {{ job.status }}</p>
+          <div class="icons-card">
+            <a href="{% url 'post-update' job.id %}" title="update">
+              <i class='fas fa-pen-alt update-icon'></i>
+            </a>
 
-                    <a href="{% url 'post-delete' job.id %}" title="delete">
-                      <i class='far fa-trash-alt delete-icon'></i>
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
+            <a href="{% url 'post-delete' job.id %}" title="delete">
+              <i class='far fa-trash-alt delete-icon'></i>
+            </a>
           </div>
+        </div> -->
+      </div>
+    </div>
+  </div>
 
-        {% endfor %}
+{% endfor %}
 
         <div class="pagination-section">
           {% if is_paginated %}
